--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.arc.view.arcview.view.ArcView
+    <com.arc.view.arcview.view.ArcImageView
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:arcbump="true"
         app:archeight="20"
-        app:arcbgcolor="@color/colorPrimary"
+        android:src="@drawable/xcs"
+        android:scaleType="fitXY"
         />
 
-</LinearLayout>
+</FrameLayout>
